tests/baselines/reference/duplicateLabel2.errors.txt
duplicateLabel2.ts(3,3): error TS1114: Duplicate label 'target'.


==== duplicateLabel2.ts (1 errors) ====
    target:
    while (true) {
      target:
      ~~~~~~
!!! error TS1114: Duplicate label 'target'.
      while (true) {
      }
    }